--- a/invoice_manager/template/invoice.tex
+++ b/invoice_manager/template/invoice.tex
@@ -3,6 +3,7 @@
 % Page setup
 \usepackage[a4paper, margin=1in]{geometry}
 \usepackage{array}
+\usepackage{tabularx}
 \usepackage{graphicx}
 \usepackage{lastpage}
 \usepackage{fancyhdr}
@@ -22,11 +23,14 @@
 
 \begin{document}
 
+    \renewcommand{\arraystretch}{1.3}
+
     \begin{center}
     {\Huge \textbf{Caffeine Driven Development}} \\
     \vspace{0.2cm}
-    3228 North Sheffield Avenue \\
-    Chicago, Illinois 60657
+    3228 North Sheffield Avenue, Unit 3\\
+    Chicago, Illinois 60657-6969 \\
+    support@caffeine-driven-development.com
     \end{center}
 
     \vspace{1cm}
@@ -35,7 +39,7 @@
     \noindent
     \begin{minipage}{0.45\linewidth}
         \textbf{@@CLIENT_NAME@@} \\
-        @@CLIENT_ADDRESS@@  \\
+        @@CLIENT_CONTACT@@  \\
     \end{minipage}
     \hfill
     \begin{minipage}{0.45\linewidth}
@@ -52,18 +56,18 @@
 
     \vspace{1cm}
 
-% Line items table
-    \renewcommand{\arraystretch}{1.3}
-    \rowcolors{1}{gray!10}{white}
-    \begin{tabular}{| m{8cm} | R{1cm} | R{2cm} | R{2cm} |}
+    \noindent
+        % Line items table
+        \rowcolors{1}{gray!10}{white}
+        \begin{tabularx}{\textwidth}{| X | R{1.5cm} | R{1.5cm} | R{2cm} |}
         \hline
-        \rowcolor{gray!30}
-        \textbf{Description} & \textbf{Qty} & \textbf{Unit Price} & \textbf{Item Total} \\
-        \hline
-        @@LINE_ITEMS@@
-        \rowcolor{white}
-        \multicolumn{3}{r|}{ Total } &  \cellcolor{gray!30} \textbf{\$@@TOTAL@@} \\
-        \cline{4-4}
-    \end{tabular}
+            \rowcolor{gray!30}
+            \textbf{Item} & \textbf{Quantity} & \textbf{Rate} & \textbf{Amount} \\
+            \hline
+            @@LINE_ITEMS@@
+            \rowcolor{white}
+            \multicolumn{3}{r|}{ Total } &  \cellcolor{gray!30} \textbf{\$@@TOTAL@@} \\
+            \cline{4-4}
+        \end{tabularx}
 
 \end{document}
