--- a/invoice_manager/template/invoice.tex
+++ b/invoice_manager/template/invoice.tex
@@ -26,11 +26,10 @@
     \renewcommand{\arraystretch}{1.3}
 
     \begin{center}
-    {\Huge \textbf{Caffeine Driven Development}} \\
+    {\Huge \textbf{@@COMPANY_NAME@@}} \\
     \vspace{0.2cm}
-    3228 North Sheffield Avenue, Unit 3\\
-    Chicago, Illinois 60657-6969 \\
-    support@caffeine-driven-development.com
+    @@COMPANY_ADDRESS@@\\
+    @@COMPANY_EMAIL@@
     \end{center}
 
     \vspace{1cm}
