--- a/invoice_manager/template/invoice.tex
+++ b/invoice_manager/template/invoice.tex
@@ -10,6 +10,9 @@
 \usepackage[table]{xcolor}
 \usepackage{fontspec}
 
+\usepackage{fontspec}
+\setmainfont{TeX Gyre Heros}
+
 \renewcommand{\headrulewidth}{0pt}
 
 \newcolumntype{C}[1]{>{\centering\arraybackslash}m{#1}}
