--- a/invoice_manager/template/invoice.tex
+++ b/invoice_manager/template/invoice.tex
@@ -10,13 +10,14 @@
 \usepackage[table]{xcolor}
 \usepackage{fontspec}
 
-\usepackage{fontspec}
-\setmainfont{TeX Gyre Heros}
+\setmainfont{Helvetica Neue}
 
 \renewcommand{\headrulewidth}{0pt}
 
 \newcolumntype{C}[1]{>{\centering\arraybackslash}m{#1}}
 \newcolumntype{R}[1]{>{\raggedleft\arraybackslash}m{#1}}
+\newcolumntype{Y}{>{\raggedleft\arraybackslash}r}
+
 
 % Header & footer
 \pagestyle{fancy}
@@ -60,7 +61,7 @@
     \noindent
         % Line items table
         \rowcolors{1}{gray!10}{white}
-        \begin{tabularx}{\textwidth}{| X | R{1.5cm} | R{2cm} | R{2cm} |}
+        \begin{tabularx}{\textwidth}{| X | Y | Y | Y |}
         \hline
             \rowcolor{gray!30}
             \textbf{Item} & \textbf{Quantity} & \textbf{Rate} & \textbf{Amount} \\
